--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,12 +8,12 @@
     <div class="container">
         <div class="header">
             <h1> Auto completar encuestas docente </h1>
-            <h5> UTN Mendoza 48605 </h5>
+            <h5> UTN Mendoza </h5>
         </div>
         
         <div class="form_div">
             <form action="/get_info" method="post" class="form-floating">
-                <input type="number" class="form-control"  name="legajo" id="Legajo" placeholder="Legajo" autocomplete='off' required>
+                <input type="number" class="form-control"  name="legajo" id="Legajo" placeholder="Legajo" autocomplete='off' required value="48605" readonly>
                 <label for="Legajo">Legajo</label>
                 <button class="btn btn-secondary btn-lg" type="submit" id="atencion"> ingresar </button>
             </form>
