--- a/src/views/partials/head.html
+++ b/src/views/partials/head.html
@@ -3,6 +3,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="img/utn_logo.png"/>
 <title>Auto encuestas <%- title %> </title>
+<!-- GOOGLE ADSENS -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6006095458059819" crossorigin="anonymous"></script>
 <!-- BOOTSTRAP 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- CUSTOM CSS -->
