--- a/src/public/css/responce.css
+++ b/src/public/css/responce.css
@@ -6,6 +6,14 @@
     margin-top: 15%;
     margin-bottom: 10%;
 }
+
+
+.buttons *{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-decoration: none;
+}
 iframe{
     height: 620px;
     width: 350px;
