re-worked responcive designed

--- a/src/views/auto_form.html
+++ b/src/views/auto_form.html
@@ -4,6 +4,7 @@
     <%- include('partials/head.html') %>
     <link rel="stylesheet" href="/css/auto_form.css">
     <link rel="stylesheet" href="/css/preloader.css">
+    <link rel="stylesheet" href="/css/screen_max_min_with.css">
 </head>
 <body onload="button_state('<%- button_state %>')">
     <%- include('partials/preloader.html') %>
