--- a/src/views/responce.html
+++ b/src/views/responce.html
@@ -3,10 +3,11 @@
 <head>
     <%- include('partials/head.html') %>
     <link rel="stylesheet" href="/css/responce.css">
+    <link rel="stylesheet" href="/css/screen_max_min_with.css">
 </head>
 <body>
     <div class="container">
-        <div class="header">
+        <div class="header-response">
             <h1> Encuestas completadas: </h1>         
         </div>
         <div class="buttons">
