--- a/src/public/css/responce.css
+++ b/src/public/css/responce.css
@@ -2,7 +2,7 @@
     text-align: center;  
 }
 
-.header{
+.header-response{
     margin-top: 15%;
     margin-bottom: 10%;
 }
@@ -13,6 +13,8 @@
     margin-left: auto;
     margin-right: auto;
     text-decoration: none;
+
+    margin-top: 2% !important;
 }
 iframe{
     height: 620px;
