--- a/src/public/css/screen_max_min_with.css
+++ b/src/public/css/screen_max_min_with.css
@@ -1,16 +1,18 @@
-@media only screen and (max-width: 900px) {
-    .alert{
-        margin-top: 15%;
+@media only screen and (max-width: 1000px) {
+    .header{
+        margin-bottom: 25% !important;
+    };
+    .title{
+        margin-top: 15% !important;
+    }
+    .form-check-input, label, .btn-check {
+        margin-bottom: 10%;
+    }
+    .preloader_show{
+        
+        padding-top: 60%;
     }
 }
-@media only screen and (max-width: 600px) {
-    .Title_card{
-        margin: 10%;
-    }
-    .alert{
-        margin-top: 25%;
-    }
-    
-}
+
 
 
