--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,6 +3,7 @@
 <head>
     <%- include('partials/head.html') %>
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/screen_max_min_with.css">
 </head>
 <body>
     <div class="container">
