--- a/src/views/partials/head.html
+++ b/src/views/partials/head.html
@@ -1,7 +1,9 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="UTN, Univercidad Tecnologia Nacional, encuesta docente"/>
 <link rel="icon" type="image/png" href="img/utn_logo.png"/>
+<meta name="description" content="Pagina web para completar de manera automatica las encuestas docente de UTN regional Mendoza"/>
 <title>Auto encuestas <%- title %> </title>
 <!-- GOOGLE ADSENS -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6006095458059819" crossorigin="anonymous"></script>
@@ -9,6 +11,5 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- CUSTOM CSS -->
 <link rel="stylesheet" href="/css/dark_light_mode.css">
-<link rel="stylesheet" href="/css/screen_max_min_with.css">
 <link rel="stylesheet" href="/css/main.css">
 
