handeling errors in the index input

--- a/src/public/css/dark_light_mode.css
+++ b/src/public/css/dark_light_mode.css
@@ -1,6 +1,6 @@
 /* Dark mode */
 @media (prefers-color-scheme: Dark) {
-    body,#offcanvasRight_1,#offcanvasRight_2,#offcanvasRight_3, input, .card, .preloader_show {
+    body,#offcanvasRight_1,.offcanvas, input, .card, .preloader_show {
         background-color: #313131 !important;
         color: white !important;
     }
@@ -10,11 +10,14 @@
     .card,.accordion-body{
         background-color: #666666 !important;
     }
+    .btn-close{
+        filter: invert(1)
+    }
 }
 
 /* Light mode */
 @media (prefers-color-scheme: Light) {
-    body, #offcanvasRight_1,#offcanvasRight_2 {
+    body, .offcanvas {
         background-color: white;
         color: #313131;
     }
