--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -1,4 +1,20 @@
-<small> Por fallos o consulatas comincarse a: info.utn.2022@gmail.com</small>
+<button class="btn btn-warning info" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBackdrop" aria-controls="offcanvasWithBackdrop">info</button>
+
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasWithBackdrop" aria-labelledby="offcanvasWithBackdropLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasWithBackdropLabel">Informacion: </h5>
+      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+        <p> Esta pagina esta aun en desarrollo por lo cual se recomienda revisar que las encuestas se hayan completado y avisar sobre fallos esteticos o de funcionamiento es altamente apreciado. </p>
+        <br>
+        <h6> En caso de fallos, o cunsultas comunicarse a: </h6>
+        <p> info.utn.2022@gmail.com </p>
+        <br>
+        <h6> Codigo de la pagina: </h6>
+        <a href="https://github.com/InfoUtn2022/auto_encuestas">https://github.com/InfoUtn2022/auto_encuestas</a>
+    </div>
+</div>
 
 <!-- BOOTSTRAP 5 -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
