--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -8,21 +8,24 @@
     border-color: #313131 !important;
 }
 
+.info{
+    height: 75% !important;
+    width: 80px !important;
+    vertical-align: top;
+    padding: 0;
+}
+
+
 
 
 img{
     width: 100%;
     height: 100vh;
 }
-
-
 footer {
     position:absolute;
     bottom:0;
     width:100%;
-    height:3%;   /* Height of the footer */
-
-    background:#666666;
-
+    height: 4%;   /* Height of the footer */
     text-align: center;
  }
