--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,10 +14,14 @@
         
         <div class="form_div">
             <form action="/get_info" method="post" class="form-floating">
-                <input type="number" class="form-control"  name="legajo" id="Legajo" placeholder="Legajo" autocomplete='off' required value="48605" readonly>
+                <input type="number" class="form-control"  name="legajo" id="Legajo" placeholder="Legajo" autocomplete='off' required value="48605">
                 <label for="Legajo">Legajo</label>
                 <button class="btn btn-secondary btn-lg" type="submit" id="atencion"> ingresar </button>
             </form>
+        </div>
+
+        <div class="alert alert-warning" role="alert" style="display: <%- alert %>" >
+           <b> <%- error %> </b> 
         </div>
         
     </div>
