--- a/src/views/partials/head.html
+++ b/src/views/partials/head.html
@@ -5,8 +5,15 @@
 <link rel="icon" type="image/png" href="img/utn_logo.png"/>
 <meta name="description" content="Pagina web para completar de manera automatica las encuestas docente de UTN regional Mendoza"/>
 <title>Auto encuestas <%- title %> </title>
-<!-- GOOGLE ADSENS -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6006095458059819" crossorigin="anonymous"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E9MV1GQZHM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E9MV1GQZHM');
+</script>
 <!-- BOOTSTRAP 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- CUSTOM CSS -->
