--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -2,16 +2,29 @@
 
 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasWithBackdrop" aria-labelledby="offcanvasWithBackdropLabel">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasWithBackdropLabel">Informacion: </h5>
+      <h5 class="offcanvas-title" id="offcanvasWithBackdropLabel">Información: </h5>
       <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
         <p> Esta pagina esta aun en desarrollo por lo cual se recomienda revisar que las encuestas se hayan completado y avisar sobre fallos esteticos o de funcionamiento es altamente apreciado. </p>
         <br>
-        <h6> En caso de fallos, o cunsultas comunicarse a: </h6>
+        <h5> Funcionamiento: </h5>
+        <p> 
+          <b>1: </b>Ingresar un numero de legajo valido, en caso de no serlo una alerta avida el error, si todas las encuestas ya estan completadas una alerta lo informara.
+          <br>
+          <b>2: </b>Indicar que encuestas se desea realizar, por defecto estan todas marcadas.
+          <br>
+          <b>3: </b>Indicar como rellenar las encuestas, una vez marcado se rellenaran todas por igual, <b>MAL :</b> equivale a insuficiente, <b>BIEN :</b> equivale a siempre / exelente, los cuestionarios abiertos se rellenaran con un "." en cualquier caso.
+          <br>
+          <b>4: </b>Al hacer click en "contestar" se enviaran todas las respuestas, este proceso puede tardar unos segundos, el tiempo de espera varia según la cantidad de encuestas que se deben enviar.
+          <br>
+          <b>5: </b>Una vez terminado el proceso, se muestran tres botones: <b>Inicio :</b> redirecciona a la pagina inicial, <b>Comprobar encuestas :</b> redirecciona a la selección de encuestas de autogestión, <b>Autogestión :</b> redirecciona al inicio de autogestion
+        </p>
+        <br>
+        <h5> En caso de fallos, o consultas comunicarse a: </h5>
         <p> info.utn.2022@gmail.com </p>
         <br>
-        <h6> Codigo de la pagina: </h6>
+        <h5> Codigo de la pagina: </h5>
         <a href="https://github.com/InfoUtn2022/auto_encuestas">https://github.com/InfoUtn2022/auto_encuestas</a>
     </div>
 </div>
