--- a/src/views/responce.html
+++ b/src/views/responce.html
@@ -8,17 +8,17 @@
 <body>
     <div class="container">
         <div class="header-response">
-            <h1> Encuestas completadas: </h1>         
+            <h1> Encuestas completadas </h1>         
         </div>
         <div class="buttons">
             <a href="/">
                 <button class="btn btn-secondary btn-lg"> Inicio </button>
             </a>
             <a href="http://encuesta.frm.utn.edu.ar/encuesta_materia/encuestamat.php?legajo=<%- legajo %>">
-                <button class="btn btn-secondary btn-lg"> Comprovar encuestas </button>
+                <button class="btn btn-secondary btn-lg"> Comprobar encuestas </button>
             </a>
             <a href="https://sysacad.frm.utn.edu.ar/login.php">
-                <button class="btn btn-secondary btn-lg"> Autogestion </button>
+                <button class="btn btn-secondary btn-lg"> Autogestión </button>
             </a>        
         </div>
     </div>
