--- a/src/public/css/auto_form.css
+++ b/src/public/css/auto_form.css
@@ -55,3 +55,10 @@ button{
 .form-check-input, label, .btn-check {
     margin-bottom: 5%;
 }
+
+.form-check-label {
+    width: 50vw;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
