--- a/src/views/auto_form.html
+++ b/src/views/auto_form.html
@@ -25,7 +25,7 @@
                 <label class="btn btn-secondary down_button" for="insuficiente">mal</label>
 
                 <input type="radio" class="btn-check btn-lg down_button" name="option" id="ns" value="ns" autocomplete="off" checked>
-                <label class="btn btn-secondary down_button " for="ns" id="ns">no save, no contesta</label>
+                <label class="btn btn-secondary down_button " for="ns" id="ns">no sabe, no contesta</label>
 
                 <input type="radio" class="btn-check btn-lg down_button" name="option" id="siempre" value="siempre" autocomplete="off">
                 <label class="btn btn-secondary down_button" for="siempre">bien</label>
