--- a/src/public/css/preloader.css
+++ b/src/public/css/preloader.css
@@ -3,9 +3,13 @@
     top: 0;
     width: 100%;
     height: 100vh;
-    padding-top: 10%;
     
-    text-align: center
+   
+    z-index: 1;
+    text-align: center;
+
+    
+    transition: opacity 1s ease;
 };
 h5{
     margin-bottom: 10% !important;
