--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="/css/preloader.css">
 </head>
 <body>
-    <div class="preloader_show" id="preloader">
+    <div class="preloader_show" id="preloader_inicio">
         <h1>Auto completar encuestas</h1>
-    
-        <img class="preloader_img" src="img/logo.png" alt="">
-           
+        <img class="preloader_img" src="../img/logo.png" alt="">
+    </div>
+    <div class="preloader_not_show" id="preloader">    
+        <div class="spinner">
+            <div class="d-flex justify-content-center" >
+                <div class="not_show" role="status" id="preloader_spinner"></div>
+            </div>
+        </div>
     </div>
     <div class="container">
         <div class="header">
@@ -23,7 +28,7 @@
             <form action="/get_info" method="post" class="form-floating">
                 <input type="number" class="form-control"  name="legajo" id="Legajo" placeholder="Legajo" autocomplete='off' required>
                 <label for="Legajo">Legajo</label>
-                <button class="btn btn-secondary btn-lg" type="submit" id="atencion"> ingresar </button>
+                <button class="btn btn-secondary btn-lg" type="submit" id="atencion" onclick="load()"> ingresar </button>
             </form>
         </div>
 
@@ -35,13 +40,15 @@
 </body>
 <footer>
     <script>
-        
         window.addEventListener('load', () => {
             setTimeout(function () {
-                document.getElementById('preloader').className = 'preloader_not_show';
-                document.getElementById('preloader_spinner').className = 'not_show';
-            }, 1000);    
+                document.getElementById('preloader_inicio').className = 'preloader_not_show';
+            }, 500);    
         });
+        function load(){
+            document.getElementById('preloader').className = 'preloader_show';
+            document.getElementById('preloader_spinner').className = 'spinner-border text-light';
+        };
     </script>
     <%- include('partials/footer.html') %>
 </footer>
