--- a/src/views/responce.html
+++ b/src/views/responce.html
@@ -26,12 +26,7 @@
     </div>
 </body>
 <footer>
-    <script>
-        window.addEventListener('load', () => {
-            document.getElementById('preloader').className = 'preloader_not_show';
-            document.getElementById('preloader_spinner').className = 'not_show';
-        });
-    </script>
+    <script>window.addEventListener('load', () => {document.getElementById('preloader').className = 'preloader_not_show';document.getElementById('preloader_spinner').className = 'not_show';});</script>
     <%- include('partials/footer.html') %>
 </footer>
 </html>
