--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -7,7 +7,6 @@
     background-color: #8f6f19 !important;
     border-color: #313131 !important;
 }
-
 .info{
     margin-top: 0 !important;
     height: 75% !important;
@@ -15,12 +14,9 @@
     vertical-align: top;
     padding: 0;
 }
-
-
 .alert{
     margin-top: 15%;
 }
-
 img{
     width: 70vw ;
     height: auto ;
@@ -29,6 +25,6 @@ footer {
     position:absolute;
     bottom:0;
     width:100%;
-    height: 4%;   /* Height of the footer */
+    height: 4%;
     text-align: center;
-};
+}
