--- a/src/public/css/preloader.css
+++ b/src/public/css/preloader.css
@@ -2,14 +2,11 @@
     position: fixed;
     top: 0;
     width: 100%;
-    height: 100vh;
-    
-   
+    height: 100vh; 
     z-index: 1;
     text-align: center;
-
     transition: all 1s ease;
-};
+}
 #preloader_inicio{
     z-index: 2;
 }
@@ -27,5 +24,4 @@ h5{
     color: #ffc731 !important;
     width: 10rem;
     height: 10rem;
-};
-
+}
