--- a/src/views/auto_form.html
+++ b/src/views/auto_form.html
@@ -15,7 +15,6 @@
                 <% for (let index = 0; index < info.length; index++) { %>
                     <input class="form-check-input" type="checkbox" role="switch" name="<%- index %>" value="<%- info[index].code %>" checked>          
                     <label class="form-check-label" for="<%- index %>" data-bs-toggle="tooltip" data-bs-placement="top" title="<%- info[index].text %>"><%- info[index].text %></label>
-                    
                     <br>
                 <% }; %>
             </div>      
@@ -23,10 +22,8 @@
             <div class="radio_buttons">
                 <input type="radio" class="btn-check btn-lg down_button" name="option" id="insuficiente" value="insuficiente" autocomplete="off">
                 <label class="btn btn-secondary down_button" for="insuficiente">mal</label>
-
                 <input type="radio" class="btn-check btn-lg down_button" name="option" id="ns" value="ns" autocomplete="off" checked>
                 <label class="btn btn-secondary down_button " for="ns" id="ns">no sabe, no contesta</label>
-
                 <input type="radio" class="btn-check btn-lg down_button" name="option" id="siempre" value="siempre" autocomplete="off">
                 <label class="btn btn-secondary down_button" for="siempre">bien</label>
             </div>
@@ -46,9 +43,7 @@
             document.getElementById('preloader_spinner').className = 'spinner-border text-light';
         };
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl)
-        });
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {return new bootstrap.Tooltip(tooltipTriggerEl)});
     </script>
 </footer>
 </html>
