--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="preloader_show" id="preloader_inicio">
         <h1>Auto completar encuestas</h1>
-        <img class="preloader_img" src="../img/logo.png" alt="">
+        <img class="preloader_img" src="img/logo.png" alt="">
     </div>
     <div class="preloader_not_show" id="preloader">    
         <div class="spinner">
@@ -22,8 +22,7 @@
         <div class="header">
             <h1> Auto completar encuestas docente </h1>
             <h5> UTN Mendoza </h5>
-        </div>
-        
+        </div>       
         <div class="form_div">
             <form action="/get_info" method="post" class="form-floating">
                 <input type="number" class="form-control"  name="legajo" id="Legajo" placeholder="Legajo" autocomplete='off' required>
@@ -31,20 +30,14 @@
                 <button class="btn btn-secondary btn-lg" type="submit" id="atencion" onclick="load()"> ingresar </button>
             </form>
         </div>
-
         <div class="alert alert-warning" role="alert" style="display: <%- alert %>" >
            <b> <%- error %> </b> 
-        </div>
-        
+        </div>  
     </div>
 </body>
 <footer>
     <script>
-        window.addEventListener('load', () => {
-            setTimeout(function () {
-                document.getElementById('preloader_inicio').className = 'preloader_not_show';
-            }, 500);    
-        });
+        window.addEventListener('load', () => {setTimeout(function () {document.getElementById('preloader_inicio').className = 'preloader_not_show';},500);});
         function load(){
             document.getElementById('preloader').className = 'preloader_show';
             document.getElementById('preloader_spinner').className = 'spinner-border text-light';
