--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -7,7 +7,7 @@
     </div>
     <div class="offcanvas-body">
       <h4>Aclaraciones:</h4>
-      <p>Esta paguina web es un projecto particular de alumnos para alumnos y ningún profesor o directivo tiene relación con el mismo.</p>
+      <p>Esta paguina web es un projecto de codigo abierto de alumnos para alumnos y ningún profesor o directivo tiene relación con el mismo.</p>
       <p>Esta pagina esta aun en desarrollo por lo cual se recomienda revisar que las encuestas se hayan completado y avisar sobre fallos esteticos o de funcionamiento es altamente apreciado.</p>
       <h4> Funcionamiento: </h4>
       <p> 
