--- a/src/public/css/screen_max_min_with.css
+++ b/src/public/css/screen_max_min_with.css
@@ -15,3 +15,17 @@
         padding-top: 40%;
     }
 }
+
+
+@media only screen and (min-width: 1100px){
+    #preloader_inicio{
+        padding-top: 10%;
+    }
+    #preloader{
+        padding-top: 20%;
+    }
+    img{
+        width: 20vw;
+        height: auto;
+    }
+}
