--- a/src/views/responce.html
+++ b/src/views/responce.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <%- include('partials/head.html') %>
     <link rel="stylesheet" href="/css/responce.css">
