re worked get/post code and comments added

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="preloader_show" id="preloader_inicio">
         <h1>Auto completar encuestas</h1>
-        <img class="preloader_img" src="img/logo.png" alt="">
+        <img class="preloader_img" src="img/logo.png" alt="UTN Logo">
     </div>
     <div class="preloader_not_show" id="preloader">    
         <div class="spinner">
