--- a/src/views/partials/head.html
+++ b/src/views/partials/head.html
@@ -3,6 +3,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="UTN, Univercidad Tecnologia Nacional, encuesta docente"/>
 <meta name="description" content="Pagina web para completar de manera automatica las encuestas docente de UTN regional Mendoza"/>
+<meta name="revised" content="Sunday, February 13th, 2022, 3:00 pm" />
+<meta name="author" content="utn students, info.utn.2022@gmail.com">
+<meta name="url" content="http://www.autoencuestasutnmendoza.site/">
 <title>Auto encuestas <%- title %> </title>
 <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-E9MV1GQZHM"></script>
