--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -15,7 +15,7 @@
         <br>
         <b>2: </b>Indicar que encuestas se desea realizar, por defecto estan todas marcadas.
         <br>
-        <b>3: </b>Indicar como rellenar las encuestas, una vez marcado se rellenaran todas por igual, <b>MAL :</b> equivale a insuficiente, <b>BIEN :</b> equivale a siempre / exelente, los cuestionarios abiertos se rellenaran con un "★" en cualquier caso.
+        <b>3: </b>Indicar como rellenar las encuestas, una vez marcado se rellenaran todas por igual, <b>MAL :</b> equivale a insuficiente, <b>BIEN :</b> equivale a siempre / exelente, los cuestionarios abiertos quedan en blanco en cualquier caso.
         <br>
         <b>4: </b>Al hacer click en "contestar" se enviaran todas las respuestas, este proceso puede tardar unos segundos, el tiempo de espera varia según la cantidad de encuestas que se deben enviar.
         <br>
