--- a/src/views/index.html
+++ b/src/views/index.html
@@ -24,10 +24,10 @@
             <h5> UTN Mendoza </h5>
         </div>       
         <div class="form_div">
-            <form action="/get_info" method="post" class="form-floating">
+            <form action="/get_info" method="post" class="form-floating" onsubmit="load()">
                 <input type="number" class="form-control"  name="legajo" id="Legajo" placeholder="Legajo" autocomplete='off' required>
                 <label for="Legajo">Legajo</label>
-                <button class="btn btn-secondary btn-lg" type="submit" id="atencion" onsubmit="load()"> ingresar </button>
+                <button class="btn btn-secondary btn-lg" type="submit" id="atencion"> ingresar </button>
             </form>
         </div>
         <div class="alert alert-warning" role="alert" style="display: <%- alert %>" >
