number of completed surveys added in the "completadas" view

--- a/src/views/partials/head.html
+++ b/src/views/partials/head.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="keywords" content="UTN, Univercidad Tecnologia Nacional, encuesta docente"/>
+<meta name="keywords" content="UTN, Univercidad Tecnologia Nacional, encuesta docente, encuesta, auto encuestas"/>
 <meta name="description" content="Pagina web para completar de manera automatica las encuestas docente de UTN regional Mendoza"/>
 <title>Auto encuestas <%- title %> </title>
 <!-- Google Analytics -->
