--- a/src/views/responce.html
+++ b/src/views/responce.html
@@ -10,7 +10,7 @@
     <%- include('partials/preloader.html') %>
     <div class="container">
         <div class="header-response">
-            <h1> Encuestas completadas </h1>         
+            <h1> <%- materias %> Encuestas completadas </h1>     
         </div>
         <div class="buttons">
             <a href="/">
