--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -7,19 +7,19 @@
     </div>
     <div class="offcanvas-body">
       <h4>Aclaraciones:</h4>
-      <p>Esta paguina web es un projecto de codigo abierto de alumnos para alumnos y ningún profesor o directivo tiene relación con el mismo.</p>
-      <p>Esta pagina esta aun en desarrollo por lo cual se recomienda revisar que las encuestas se hayan completado y avisar sobre fallos esteticos o de funcionamiento es altamente apreciado.</p>
+      <p>Esta pagina web es un projecto de código abierto de alumnos para alumnos y ningún profesor o directivo tiene relación con el mismo.</p>
+      <p>Esta pagina esta aun en desarrollo por lo cual se recomienda revisar que las encuestas se hayan completado y avisar sobre fallos estéticos o de funcionamiento es altamente apreciado.</p>
       <h4> Funcionamiento: </h4>
       <p> 
-        <b>1: </b>Ingresar un numero de legajo valido, en caso de no serlo una alerta avida el error, si todas las encuestas ya estan completadas una alerta lo informara.
+        <b>1: </b>Ingresar un numero de legajo valido, en caso de no serlo una alerta avisa el error, si todas las encuestas ya están completadas una alerta lo informara.
         <br>
-        <b>2: </b>Indicar que encuestas se desea realizar, por defecto estan todas marcadas.
+        <b>2: </b>Indicar que encuestas se desea realizar, por defecto están todas marcadas.
         <br>
-        <b>3: </b>Indicar como rellenar las encuestas, una vez marcado se rellenaran todas por igual, <b>MAL :</b> equivale a insuficiente, <b>BIEN :</b> equivale a siempre / exelente, los cuestionarios abiertos quedan en blanco en cualquier caso.
+        <b>3: </b>Indicar como rellenar las encuestas, una vez marcado se rellenaran todas por igual, <b>MAL :</b> equivale a insuficiente, <b>BIEN :</b> equivale a siempre / excelente, los cuestionarios abiertos quedan en blanco en cualquier caso.
         <br>
         <b>4: </b>Al hacer click en "contestar" se enviaran todas las respuestas, este proceso puede tardar unos segundos, el tiempo de espera varia según la cantidad de encuestas que se deben enviar.
         <br>
-        <b>5: </b>Una vez terminado el proceso, se muestran tres botones: <b>Inicio :</b> redirecciona a la pagina inicial, <b>Comprobar encuestas :</b> redirecciona a la selección de encuestas de autogestión, <b>Autogestión :</b> redirecciona al inicio de autogestion
+        <b>5: </b>Una vez terminado el proceso, se muestran tres botones: <b>Inicio :</b> redirecciona a la pagina inicial, <b>Comprobar encuestas :</b> redirecciona a la selección de encuestas de autogestión, <b>Autogestión :</b> redirecciona al inicio de autogestión
       </p>
       <h4> En caso de fallos, o consultas comunicarse a: </h4>
       <p><b>e-mail:</b> info.utn.2022@gmail.com 
