--- a/src/views/partials/head.html
+++ b/src/views/partials/head.html
@@ -1,8 +1,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="keywords" content="UTN, Univercidad Tecnologia Nacional, encuesta docente, encuesta, auto encuestas"/>
-<meta name="description" content="Pagina web para completar de manera automatica las encuestas docente de UTN regional Mendoza"/>
+<meta name="keywords" content="UTN, Univercidad Tecnologia Nacional, encuesta docente, encuesta, auto encuestas, Autogestión, autogestion"/>
+<meta name="description" content="Pagina web para completar de manera automatica las encuestas docente de la pagina de Autogestión UTN regional Mendoza"/>
 <title>Auto encuestas <%- title %> </title>
 <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-E9MV1GQZHM"></script>
